# controllers/events.ts
@@ -1,51 +1,38 @@
-import { Request } from 'express'
 import httpStatus from 'http-status'
 import { catchAsync } from '../utils/catchAsync'
 import service from '../services/events'
 import {
-  EventBodyDTO,
-  EventParamsDTO,
-  EventQueryDTO,
-  EventRequestParams,
-  EventRequestQuery,
+  EventBodyDTO as BodyDTO,
+  EventParamsDTO as ParamsDTO,
+  EventQueryDTO as QueryDTO,
 } from '../models/typeorm/dto/EventDTO'
 import { Event } from '../models/typeorm/entity/Event'
 import { createResponse } from '../utils/createResponse'
 import { ImageDTO } from '../models/typeorm/dto/ImageDTO'
+import {
+  EventApplyBodyDTO as ApplyBodyDTO,
+  EventApplyQueryDTO as ApplyQueryDTO,
+  EventApplyUpdateBodyDTO as ApplyUpdateBodyDTO,
+} from '../models/typeorm/dto/EventAppliesDTO'
+import RequestHandler from './requestHandler'
+import { EventApply } from '../models/typeorm/entity/EventApply'
 
-export default class EventController {
-  private static extractParams(req: Request): EventParamsDTO {
-    const params = req.params as unknown as EventRequestParams
-    return new EventParamsDTO(params)
-  }
-
-  private static extractBody(req: Request): EventBodyDTO {
-    return new EventBodyDTO(req.body)
-  }
-
-  private static extractQuery(req: Request): EventQueryDTO {
-    return new EventQueryDTO(req.query as EventRequestQuery)
-  }
-
-  private static extractFile(req: Request): ImageDTO {
-    return new ImageDTO(req.file!)
-  }
-
+export default class EventController extends RequestHandler {
   static getEvents = catchAsync(async (req, res, next) => {
-    const query = this.extractQuery(req)
+    const query = this.extractQuery<QueryDTO>(req, QueryDTO)
     const events = await service.getEvents(query)
     res.status(httpStatus.OK).json(createResponse<Event[]>(events))
   })
 
   static getEvent = catchAsync(async (req, res, next) => {
-    const { id } = EventController.extractParams(req)
+    const { id } = this.extractParams<ParamsDTO>(req, ParamsDTO)
     const event = await service.getEventById(id)
     res.status(httpStatus.OK).json(createResponse<Event>(event))
   })
 
   static createEvent = catchAsync(async (req, res, next) => {
-    const file = EventController.extractFile(req)
-    const body = EventController.extractBody(req)
+    const file = this.extractFile<ImageDTO>(req, ImageDTO)
+    const body = this.extractBody<BodyDTO>(req, BodyDTO)
     await service.createEvent(body, file)
     res
       .status(httpStatus.OK)
@@ -53,22 +40,55 @@ export default class EventController {
   })
 
   static updateEvent = catchAsync(async (req, res, next) => {
-    const { id } = EventController.extractParams(req)
-    const body = EventController.extractBody(req)
+    const { id } = this.extractParams<ParamsDTO>(req, ParamsDTO)
+    const body = this.extractBody<BodyDTO>(req, BodyDTO)
     const event = await service.updateEventById(id, body)
     res.status(httpStatus.OK).json(createResponse<Event>(event))
   })
 
   static deleteEvent = catchAsync(async (req, res, next) => {
-    const { id } = EventController.extractParams(req)
+    const { id } = this.extractParams<ParamsDTO>(req, ParamsDTO)
     await service.deleteEventById(id)
     res.status(httpStatus.OK).json(createResponse<Event>())
   })
 
   static updateEventLike = catchAsync(async (req, res, next) => {
-    const { id } = EventController.extractParams(req)
-    const body = EventController.extractBody(req)
+    const { id } = this.extractParams<ParamsDTO>(req, ParamsDTO)
+    const body = this.extractBody<BodyDTO>(req, BodyDTO)
     await service.updateEventLike(id, body)
     res.status(httpStatus.OK).json(createResponse<Event>())
+  })
+
+  static getEventApplies = catchAsync(async (req, res, next) => {
+    const { id } = this.extractParams<ParamsDTO>(req, ParamsDTO)
+    const { status } = this.extractQuery<ApplyQueryDTO>(req, ApplyQueryDTO)
+    const response = await service.getEventApplies(id, status)
+    res.status(httpStatus.OK).json(createResponse<EventApply[]>(response))
+  })
+
+  static createEventApply = catchAsync(async (req, res, next) => {
+    const { id } = this.extractParams<ParamsDTO>(req, ParamsDTO)
+    const body = this.extractBody<ApplyBodyDTO>(req, ApplyBodyDTO)
+    await service.createEventApply(id, body)
+    res.status(httpStatus.OK).json(createResponse<EventApply>())
+  })
+
+  static getEventApply = catchAsync(async (req, res, next) => {
+    const { applyId } = this.extractParams<ParamsDTO>(req, ParamsDTO)
+    const response = await service.getEventApply(applyId!)
+    res.status(httpStatus.OK).json(createResponse<EventApply>(response))
+  })
+
+  static deleteEventApply = catchAsync(async (req, res, next) => {
+    const { id, applyId } = this.extractParams<ParamsDTO>(req, ParamsDTO)
+    await service.deleteEventApply(id, applyId!)
+    res.status(httpStatus.OK).json(createResponse<EventApply>())
+  })
+
+  static updateEventApply = catchAsync(async (req, res, next) => {
+    const { id, applyId } = this.extractParams<ParamsDTO>(req, ParamsDTO)
+    const body = this.extractBody<ApplyUpdateBodyDTO>(req, ApplyUpdateBodyDTO)
+    await service.updateEventApply(id, applyId!, body)
+    res.status(httpStatus.OK).json(createResponse<EventApply>())
   })
 }
