# swagger.yaml
@@ -264,6 +264,244 @@ paths:
         '5xx':
           description: 서버 에러
 
+  /events/{eventId}/applies:
+    get:
+      tags:
+        - events
+      summary: 모임에 참석, 신청 중인 유저 목록 조회
+      description: 모임에 참석, 신청 중인 유저 목록 조회를 가져오는 API
+      parameters:
+        - name: eventId
+          in: path
+          description: 모임 ID
+          required: true
+          schema:
+            type: string
+        - name: status
+          in: query
+          description: 모임 상태 값
+          required: false
+          schema:
+            type: string
+      responses:
+        '200':
+          description: 성공
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Event_Apply'
+        '4xx':
+          description: 잘못된 요청
+        '5xx':
+          description: 서버 에러
+
+    post:
+      tags:
+        - events
+      summary: 모임 신청
+      description: 모임 신청을 등록하는 API
+      parameters:
+        - name: eventId
+          in: path
+          description: 모임 ID
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                answer:
+                  type: string
+                  example: 자기소개 입니다.
+                userId:
+                  type: number
+                  example: 1
+      responses:
+        '201':
+          description: 성공
+        '4xx':
+          description: 잘못된 요청
+        '5xx':
+          description: 서버 에러
+
+  /events/{eventId}/applies/{applyId}:
+    get:
+      tags:
+        - events
+      summary: 모임 신청 중인 유저 조회
+      description: 모임 신청 중인 유저 조회를 가져오는 API
+      parameters:
+        - name: eventId
+          in: path
+          description: 모임 ID
+          required: true
+          schema:
+            type: string
+        - name: applyId
+          in: path
+          description: 모임유저 ID
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: 성공
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Event_Apply'
+        '4xx':
+          description: 잘못된 요청
+        '5xx':
+          description: 서버 에러
+
+    delete:
+      tags:
+        - events
+      summary: 모임 유저 삭제
+      description: 모임 유저 정보를 삭제하는 API
+      parameters:
+        - name: eventId
+          in: path
+          description: 모임 ID
+          required: true
+          schema:
+            type: string
+        - name: applyId
+          in: path
+          description: 모임유저 ID
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: 성공
+        '4xx':
+          description: 잘못된 요청
+        '5xx':
+          description: 서버 에러
+
+  /events/{eventId}/applies/{applyId}/answer:
+    put:
+      tags:
+        - events
+      summary: 모임 유저 정보(질문에대한 답) 수정
+      description: 모임 유저 정보(질문에대한 답)을 수정 API
+      parameters:
+        - name: eventId
+          in: path
+          description: 모임 ID
+          required: true
+          schema:
+            type: string
+        - name: applyId
+          in: path
+          description: 모임유저 ID
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                answer:
+                  type: string
+                  example: 자기소개 입니다.
+                userId:
+                  type: number
+                  example: 1
+                  description: 유저 ID
+      responses:
+        '200':
+          description: 성공
+        '4xx':
+          description: 잘못된 요청
+        '5xx':
+          description: 서버 에러
+
+  /events/{eventId}/applies/{applyId}/flag:
+    put:
+      tags:
+        - events
+      summary: 모임 유저 정보(권한) 수정
+      description: 모임 유저 정보(권한)을 수정 API
+      parameters:
+        - name: eventId
+          in: path
+          description: 모임 ID
+          required: true
+          schema:
+            type: string
+        - name: applyId
+          in: path
+          description: 모임유저 ID
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                flag:
+                  type: number
+                  example: 1
+                userId:
+                  type: number
+                  example: 1
+      responses:
+        '200':
+          description: 성공
+        '4xx':
+          description: 잘못된 요청
+        '5xx':
+          description: 서버 에러
+
+  /events/{eventId}/applies/{applyId}/status:
+    put:
+      tags:
+        - events
+      summary: 모임 유저 정보(상태) 수정
+      description: 모임 유저 정보(상태)을 수정 API
+      parameters:
+        - name: eventId
+          in: path
+          description: 모임 ID
+          required: true
+          schema:
+            type: string
+        - name: applyId
+          in: path
+          description: 모임유저 ID
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                status:
+                  type: number
+                  example: 1
+                userId:
+                  type: number
+                  example: 1
+      responses:
+        '200':
+          description: 성공
+        '4xx':
+          description: 잘못된 요청
+        '5xx':
+          description: 서버 에러
+
   /reports-event:
     get:
       tags:
@@ -837,6 +1075,54 @@ components:
           type: string
           example: 이 모임을 신고합니다.
           description: 신고내용
+        createdAt:
+          type: string
+          example: 2023-12-01T17:32:28Z
+          description: 등록날짜
+        updatedAt:
+          type: string
+          example: 2023-12-01T17:32:28Z
+          description: 수정날짜
+        deletedAt:
+          type: string
+          example: 2023-12-01T17:32:28Z
+          description: 삭제날짜
+
+    Event_Apply:
+      type: object
+      properties:
+        id:
+          type: number
+          example: 1
+          description: Primary Key
+        eventId:
+          type: number
+          example: 1
+          description: 모임 ID
+        userId:
+          type: number
+          example: 1
+          description: 유저 ID
+        answer:
+          type: string
+          example: 자기소개 입니다.
+          description: 모임 질문에 대한 대답
+        flag:
+          type: number
+          example: 0
+          description: 0 팀원, 1 팀장
+        appliedAt:
+          type: string
+          example: 2023-12-01T17:32:28Z
+          description: 신청일시
+        approvedAt:
+          type: string
+          example: 2023-12-01T17:32:28Z
+          description: 승인(거절, 취소) 일시
+        status:
+          type: number
+          example: 0
+          description: 0 신청, 1 거절, 2 취소, 3 승인,  4 탈퇴, 5 추방 (default 0)
         createdAt:
           type: string
           example: 2023-12-01T17:32:28Z
